--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -228,10 +228,12 @@ blockquote p:last-child {
 }
 
 img {
-  display: block;
+  /* display: block; */
+  display: inline-block;
   max-width: 100%;
   margin: 0 0 1rem;
-  border-radius: 5px;
+  padding: 1px;
+  /* border-radius: 5px; */
 }
 
 /* Tables */
